frontend/tests/cases/positive/scopedVariables.gr
id2 : forall (a : Type) . a -> a
id2 x = x

id : forall (a : Type) . a -> a
id = id2 (\(x : a) -> x)
