frontend/tests/cases/negative/polymorphism/poly.gr
idBad : ∀ {a : Type} . a → a
idBad = λ(x : Int) → x
